--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                             <div class="charts-form__date-filter-container">
                                 <label for="date_from" class="charts-form__date-filter-label">Дата с</label>
                                 <input type="text" name="date_from" id="date_from"
-                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг">
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
                             </div>
                             <div class="charts-form__date-filter-container">
                                 <label for="date_to" class="charts-form__date-filter-label">Дата по</label>
                                 <input type="text" name="date_to" id="date_to" 
-                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг">
+                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
                             </div>
                         </div>
                         <div class="charts-form__table-container">
@@ -236,12 +236,12 @@
                             <div class="charts-form__date-filter-container">
                                 <label for="date_from" class="charts-form__date-filter-label">Дата с</label>
                                 <input type="text" name="date_from" id="date_from"
-                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг">
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
                             </div>
                             <div class="charts-form__date-filter-container">
                                 <label for="date_to" class="charts-form__date-filter-label">Дата по</label>
                                 <input type="text" name="date_to" id="date_to" 
-                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг">
+                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
                             </div>
                         </div>
                         <ul class="charts-form__info-list">
