--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <section class="charts-form__summary-chart">
                                 <div class="chart chart_pie-summary">
                                     <p class="chart__caption">Суммарные данные</p>
-                                    <div id="chart-pie_summary" class="chart__pie"></div>
+                                    <div id="chart-pie_summary" class="chart__pie chart__pie_summary"></div>
                                 </div>
                             </section>
                         </div>
