--- a/index.html
+++ b/index.html
@@ -44,18 +44,27 @@
                         <p class="charts-form__status-text">Иванов Иван Иванович</p>
                     </div>
                 </div>
+                <button type="button" class="charts-form__refresh">
+                    Обновить
+                </button>
                 <div class="charts-form__status-wrapper charts-form__status-wrapper_charts">
                     <div class="chart chart_pie">
                         <p class="chart__caption">Диаграмма за месяц</p>
-                        <div id="chart-pie_month" class="chart__pie"></div>
+                        <div class="chart__container">
+                            <div id="chart_pie_day" class="chart__pie"></div>
+                        </div>
                     </div>
                     <div class="chart chart_pie">
                         <p class="chart__caption">Диаграмма за неделю</p>
-                        <div id="chart-pie_week" class="chart__pie"></div>
+                        <div class="chart__container">
+                            <div id="chart_pie_week" class="chart__pie"></div>
+                        </div>
                     </div>
                     <div class="chart chart_pie">
                         <p class="chart__caption">Диаграмма за день</p>
-                        <div id="chart-pie_day" class="chart__pie"></div>
+                        <div class="chart__container">
+                            <div id="chart_pie_month" class="chart__pie"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="charts-form__status-wrapper">
@@ -81,12 +90,14 @@
                             <div class="charts-form__date-filter-container">
                                 <label for="date_from" class="charts-form__date-filter-label">Дата с</label>
                                 <input type="text" name="date_from" id="date_from"
-                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг"
+                                    readonly>
                             </div>
                             <div class="charts-form__date-filter-container">
                                 <label for="date_to" class="charts-form__date-filter-label">Дата по</label>
-                                <input type="text" name="date_to" id="date_to" 
-                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
+                                <input type="text" name="date_to" id="date_to"
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг"
+                                    readonly>
                             </div>
                         </div>
                         <div class="charts-form__table-container">
@@ -115,10 +126,8 @@
                                         <td data-label="Конец" class="log-table__cell">23:00</td>
                                         <td data-label="Длительность" class="log-table__cell">08:00
                                         </td>
-                                        <td data-label="Работа двигателя на хх"
-                                            class="log-table__cell">08:00</td>
-                                        <td data-label="Работа двигателя под нагрузкой"
-                                            class="log-table__cell">08:00
+                                        <td data-label="Работа двигателя на хх" class="log-table__cell">08:00</td>
+                                        <td data-label="Работа двигателя под нагрузкой" class="log-table__cell">08:00
                                         </td>
                                         <td data-label="Скорость средняя" class="log-table__cell">10
                                             км/ч</td>
@@ -132,10 +141,8 @@
                                         <td data-label="Конец" class="log-table__cell">23:00</td>
                                         <td data-label="Длительность" class="log-table__cell">08:00
                                         </td>
-                                        <td data-label="Работа двигателя на хх"
-                                            class="log-table__cell">08:00</td>
-                                        <td data-label="Работа двигателя под нагрузкой"
-                                            class="log-table__cell">08:00
+                                        <td data-label="Работа двигателя на хх" class="log-table__cell">08:00</td>
+                                        <td data-label="Работа двигателя под нагрузкой" class="log-table__cell">08:00
                                         </td>
                                         <td data-label="Скорость средняя" class="log-table__cell">10
                                             км/ч</td>
@@ -149,10 +156,8 @@
                                         <td data-label="Конец" class="log-table__cell">23:00</td>
                                         <td data-label="Длительность" class="log-table__cell">08:00
                                         </td>
-                                        <td data-label="Работа двигателя на хх"
-                                            class="log-table__cell">08:00</td>
-                                        <td data-label="Работа двигателя под нагрузкой"
-                                            class="log-table__cell">08:00
+                                        <td data-label="Работа двигателя на хх" class="log-table__cell">08:00</td>
+                                        <td data-label="Работа двигателя под нагрузкой" class="log-table__cell">08:00
                                         </td>
                                         <td data-label="Скорость средняя" class="log-table__cell">10
                                             км/ч</td>
@@ -224,9 +229,11 @@
                                 </div>
                             </section>
                             <section class="charts-form__summary-chart">
-                                <div class="chart chart_pie-summary">
+                                <div class="chart chart_pie chart_pie-summary">
                                     <p class="chart__caption">Суммарные данные</p>
-                                    <div id="chart-pie_summary" class="chart__pie chart__pie_summary"></div>
+                                    <div class="chart__container">
+                                        <div id="chart_pie_summary" class="chart__pie"></div>
+                                    </div>
                                 </div>
                             </section>
                         </div>
@@ -236,12 +243,14 @@
                             <div class="charts-form__date-filter-container">
                                 <label for="date_from" class="charts-form__date-filter-label">Дата с</label>
                                 <input type="text" name="date_from" id="date_from"
-                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг"
+                                    readonly>
                             </div>
                             <div class="charts-form__date-filter-container">
                                 <label for="date_to" class="charts-form__date-filter-label">Дата по</label>
-                                <input type="text" name="date_to" id="date_to" 
-                                class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг" readonly>
+                                <input type="text" name="date_to" id="date_to"
+                                    class="datepicker-here charts-form__date-filter-date" placeholder="дд.мм.гггг"
+                                    readonly>
                             </div>
                         </div>
                         <ul class="charts-form__info-list">
